# terminal-typeracer-mirror

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build-all.sh  build-macos.sh  compile_mac.sh  setup-macos.sh
docs/: README.md  building.md  config.md  lang-pack-format.md  supported-languages.md
src/: actions.rs  game.rs  lang.rs  main.rs  stats.rs  term_check.rs
src/config/: defaults.rs  mod.rs  validator.rs
src/db/: mod.rs
src/db/migrations/: V1__original.sql  V2__change_game_mode.sql  V3__training_mode.sql
src/dirs/: setup_dirs.rs
src/game/: game_render.rs  mod.rs
src/game/formatter/: mod.rs
src/game/game_db/: mod.rs
src/game/game_render/: mod.rs  styles.rs
src/game/indexer/: mod.rs
src/game/input/: mod.rs
src/game/split/: mod.rs
src/game/word_processing/: mod.rs
src/graphs/: graphs_db.rs  graphs_render.rs  mod.rs
src/graphs/graphs_db/: mod.rs
src/graphs/graphs_render/: dataset.rs  mod.rs  styles.rs
src/graphs/graphs_render/day_prettifier/: mod.rs
src/graphs/user_result_mapper/: mod.rs
src/info/: info_render.rs  mod.rs
src/info/info_render/: styles.rs
src/input/: mod.rs
src/lang_pack/: lang_pack_render.rs  mod.rs
src/passage_controller/: mod.rs
src/stats/: mod.rs
src/term_check/: mod.rs  term_check_render.rs
