[package]
name = "typeracer"
version = "2.0.13"
authors = ["DarrienG <darrien@glasser.dev>"]
edition = "2021"
# Packaging for crates.io
# We don't want assets included and the like
include = [
    "**/*.rs",
    "**/*.sql",
    "Cargo.toml",
]
description="A terminal typing game. Race to see the fastest time you can get!"
repository = "https://gitlab.com/ttyperacer/terminal-typeracer"
readme = "./README.md"
keywords = ["typing", "terminal", "termion", "games", "fun"]
license = "GPL-3.0"

[profile.release]
lto = "fat"
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = 2
lto = false
debug-assertions = true
panic = 'unwind'
incremental = true
overflow-checks = true

[dependencies]
# For rendering in the terminal
tui = "0.16.0"
termion = "1.5.6"
unicode-width = "0.1.8"

# For splitting across words with full unicode compatibility
unicode-segmentation = "1.8.0"

# For lang pack and config
directories-next = "2.0.0"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }

# For downloading lang pack
git2 = { version = "0.13.25", default_features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }

# For picking random files
rand = "0.8.4"

# Command line optoins
clap = "2.33.3"

# For zipping lists
itertools = "0.10.1"

# For persisting data
rusqlite = { version = "0.26.3", features = ["bundled"] }

# For SQL migration
refinery = { version = "0.8.4", features = ["rusqlite"] }
